--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exércicio 01</title>
-    <link rel="shortcut icon" href="imagens/todos.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/html-css-javascript.jpg" type="image/x-icon">
 </head>
 <body>
 <h1> TechSolutions</h1>
@@ -29,14 +29,14 @@
 </ul>
 
 <h4>Fale conosco</h4>
-<p><ul>
+<ul>
     <li>(71) 9 9341-9982</li> <br>
-    <li>tech.soluctions@gmail.com.br</li> 
+    <li>tech.soluctions@gmail.com</li> 
 </ul>
-</p>
+
 
 <h4>Links para contato:</h4>
-<a href="https://br.linkedin.com/company/solutis-tecnologias">Linked</a> 
+<a href="https://br.linkedin.com/company/solutis-tecnologias">LinkedIn</a> 
 <br>
 <a href="https://maps.app.goo.gl/o2GpuDGT4rVC9ob88">Mapa</a>
 
